--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,34 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+html{
+  background-color: #141414;
+  color: #fff;
+  padding: 0px;
+  margin: 0px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.cardBackground {
+  background-color: #1f1f1f;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.neon {
+  color: #c4f82a;
+}
+
+.linkBackground {
+  background-color: #333333;
+}
+
+.container {
+  height: 98vh;
+  width: 98vw;
+  overflow: hidden;
+}
+
+.link{
+  color:'#fff';
+  text-decoration:none;
+  font-weight: 600;
+}
+
+.linkBackground:hover{
+  background-color: #c4f82a;
 }
